libm128/xxx
Script started on 2026-03-08 22:09:13+00:00 [COMMAND="g++ -O0 -g trial.cpp -o trial" TERM="dumb" TTY="/dev/pts/1" COLUMNS="80" LINES="41"]
In file included from trial.cpp:3:
my_e_expl.cpp: In function ‘float128_t expl(float128_t)’:
my_e_expl.cpp:124:27: error: passing ‘volatile float128_t’ as ‘this’ argument discards qualifiers [-fpermissive]
  124 |         return (twom10000*twom10000);   /* underflow */
      |                           ^~~~~~~~~
In file included from trial.cpp:2:
prelude.h:632:22: note:   in call to ‘constexpr float128_t float128_t::operator*(float128_t) const’
  632 | constexpr float128_t float128_t::operator*(const float128_t a) const
      |                      ^~~~~~~~~~
my_e_expl.cpp:124:27: error: binding reference of type ‘const float128_t&’ to ‘volatile float128_t’ discards qualifiers
  124 |         return (twom10000*twom10000);   /* underflow */
      |                           ^~~~~~~~~
prelude.h:51:44: note:   initializing argument 1 of ‘constexpr float128_t::float128_t(const float128_t&)’
   51 |     constexpr float128_t(const float128_t& a) : v(0)
      |                          ~~~~~~~~~~~~~~~~~~^
prelude.h:632:61: note:   initializing argument 1 of ‘constexpr float128_t float128_t::operator*(float128_t) const’
  632 | constexpr float128_t float128_t::operator*(const float128_t a) const
      |                                            ~~~~~~~~~~~~~~~~~^
my_e_expl.cpp:130:6: error: ‘floorl’ was not declared in this scope; did you mean ‘floorf’?
  130 | px = floorl( LOG2EL * x + 0.5_F128 ); /* floor() truncates toward -infinity. */
      |      ^~~~~~
      |      floorf
my_e_expl.cpp:131:5: error: cannot convert ‘float128_t’ to ‘int’ in assignment
  131 | n = px;
      |     ^~
      |     |
      |     float128_t
my_e_expl.cpp:132:3: error: no match for ‘operator+=’ (operand types are ‘float128_t’ and ‘float128_t’)
  132 | x += px * C1;
      | ~~^~~~~~~~~~
my_e_expl.cpp:133:3: error: no match for ‘operator+=’ (operand types are ‘float128_t’ and ‘float128_t’)
  133 | x += px * C2;
      | ~~^~~~~~~~~~
my_e_expl.cpp:139:10: error: ‘__polevll’ was not declared in this scope
  139 | px = x * __polevll( xx, P, 4 );
      |          ^~~~~~~~~
my_e_expl.cpp:144:5: error: ‘ldexpl’ was not declared in this scope; did you mean ‘ldexpf’?
  144 | x = ldexpl( x, n );
      |     ^~~~~~
      |     ldexpf
trial.cpp: At global scope:
trial.cpp:8:6: error: redefinition of ‘void hexprint(uint128_t, int)’
    8 | void hexprint(uint128_t a, int n)
      |      ^~~~~~~~
prelude.h:97:13: note: ‘void hexprint(uint128_t, int)’ previously defined here
   97 | inline void hexprint(uint128_t a, int n)
      |             ^~~~~~~~
trial.cpp:14:6: error: redefinition of ‘void show(const char*, const working_float&)’
   14 | void show(const char* s, const working_float& a)
      |      ^~~~
prelude.h:103:13: note: ‘void show(const char*, const working_float&)’ previously defined here
  103 | inline void show(const char* s, const working_float& a)
      |             ^~~~

Script done on 2026-03-08 22:09:14+00:00 [COMMAND_EXIT_CODE="1"]
